# nrs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml
.github/workflows/: publish-crates-io.yml  release.yml
benches/: filtering.rs
docs/: 00-README.md  01-SPECS.md  02-RUST-BEST-PRACTICES.md  03-RUST-INSTALLATION.md  nrs.1
scripts/: release.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: file.rs  mod.rs  types.rs
src/filter/: fuzzy.rs  mod.rs
src/history/: mod.rs  storage.rs
src/package/: descriptions.rs  manager.rs  mod.rs  scripts.rs  types.rs  workspace.rs
src/runner/: executor.rs  mod.rs
src/tui/: app.rs  input.rs  layout.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: description.rs  filter.rs  footer.rs  header.rs  mod.rs  scripts.rs
src/utils/: mod.rs  paths.rs  terminal.rs
test-projects/documented-app/: package.json
test-projects/large-monorepo/: package.json
test-projects/simple-app/: package.json
tests/: integration_tests.rs  package_parsing.rs
tests/fixtures/: basic.json  complex.json  empty-scripts.json  monorepo.json  no-scripts.json  special-characters.json  with-comments.json  with-lifecycle.json  with-ntl.json  with-scripts-info.json
tests/integration/: cli_tests.rs  config_tests.rs  detection_tests.rs  fixtures.rs  history_tests.rs  mod.rs  snapshot_tests.rs
tests/integration/snapshots/: integration_tests__integration__snapshot_tests__debug_output.snap  integration_tests__integration__snapshot_tests__dry_run_bun.snap  integration_tests__integration__snapshot_tests__dry_run_npm.snap  integration_tests__integration__snapshot_tests__dry_run_pnpm.snap  integration_tests__integration__snapshot_tests__dry_run_with_args.snap  integration_tests__integration__snapshot_tests__dry_run_yarn.snap  integration_tests__integration__snapshot_tests__error_invalid_json.snap  integration_tests__integration__snapshot_tests__error_invalid_runner.snap  integration_tests__integration__snapshot_tests__error_no_history.snap  integration_tests__integration__snapshot_tests__error_no_package_json.snap  integration_tests__integration__snapshot_tests__error_script_not_found.snap  integration_tests__integration__snapshot_tests__error_script_not_found_suggestion.snap  integration_tests__integration__snapshot_tests__help_output.snap  integration_tests__integration__snapshot_tests__help_short_output.snap  integration_tests__integration__snapshot_tests__list_basic.snap  integration_tests__integration__snapshot_tests__list_empty_project.snap  integration_tests__integration__snapshot_tests__list_with_descriptions.snap  integration_tests__integration__snapshot_tests__version_output.snap
