[package]
name = "nrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Fast interactive TUI for running npm scripts"
license = "MIT"
keywords = ["cli", "tui", "npm", "scripts", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Platform directories
dirs = "5"

# Fuzzy string matching
fuzzy-matcher = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Shell argument parsing
shell-words = "1"

# Glob pattern matching
glob = "0.3"

# YAML parsing
serde_yaml = "0.9"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = "1"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "nrs"
path = "src/main.rs"

[[bench]]
name = "filtering"
harness = false
