[package]
name = "nrs"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "Fast interactive TUI for running npm scripts"
license = "MIT"
keywords = ["cli", "tui", "npm", "scripts", "terminal"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/tx2z/nrs"
readme = "README.md"
documentation = "https://github.com/tx2z/nrs#readme"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Platform directories
dirs = "5"

# Fuzzy string matching
fuzzy-matcher = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Shell argument parsing
shell-words = "1"

# Glob pattern matching
glob = "0.3"

# YAML parsing
serde_yaml = "0.9"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = "1"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "nrs"
path = "src/main.rs"

[[bench]]
name = "filtering"
harness = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Publish jobs to run
publish-jobs = ["./publish-crates-io"]
# Whether to install an updater program
install-updater = false
